# simple-hatch

./: .gitignore  README.md  pyproject.toml  tasks.py  tox.ini
src/simple_hatch/: __init__.py
tests/: test_simple_hatch.py
